# pygame-Anguis

./: README.md  pyproject.toml
src/anguis/: __main__.py  bots.py  game.py  gameplay.py  utils.py
src/anguis.egg-info/: SOURCES.txt  entry_points.txt
