# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anguis"
version = "1.0.0"
description = "Anguis, a snake clone game"
readme = "README.md"
authors = [{ name = "Christopher Holland", email = "chris.henry.holland@gmail.com" }]
urls.Code = "https://github.com/chris-henry-holland/pygame-DisplayComponents"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pygame", "game", "Anguis", "anguis", "Snake", "snake"]
dependencies = [
    "sortedcontainers>=2.4.0",
    "pygame>=2.1.3",
    "pygame_display_component_classes @ git+https://github.com/chris-henry-holland/pygame-DisplayComponents",
]
requires-python = ">=3.11"